--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
                 </div>
             </div>
         </section>
+
+        <section id="merchandise" class="section">
+            <h2>Merchandise</h2>
+            <div class="grid">
+                <div class="card">
+                    <img src="img/s-l1600 (1).webp" alt="Jersey">
+                    <h3>Jerseys</h3>
+                    <p>Get your own "Ruck Fules" jersey and show off your Cena spirit.</p>
+                </div>
+                <div class="card">
+                    <img src="img/s-l1600.webp" alt="Cap">
+                    <h3>Caps</h3>
+                    <p>Complete your look with the iconic Cena cap.</p>
+                </div>
+            </div>
+        </section>
+
         <section id="rap-generator" class="section">
             <h2>Freestyle Rap Generator</h2>
             <p>Generate your own freestyle rap inspired by the Doctor of Thuganomics himself!</p>
